[package]
name = "cake"
version = "1.0.0-alpha"
edition = "2024"

[[bin]] # CLI
name = "cake"
path = "src/bin/cli/main.rs"

[[bin]] # Daemon
name = "caked"
path = "src/bin/daemon/main.rs"

[dependencies]
clap = { version = "4.6.0", features = [ "derive" ] }
crc32fast = "1.5.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_yaml = "0.9.34"
postcard = { version = "1.1.3", features = [ "use-std" ] }
uuid = { version = "1.23.0", features = [ "v4", "serde" ] }
anyhow = "1.0.102"
pathdiff = "0.2.3"
log = "0.4.29"
ignore = "0.4.25"
colog = "1.4.0"
sha3 = "0.11.0"
base64 = "0.22.1"
tokio = { version = "1.51.1", features = ["fs", "io-std", "io-util", "macros", "net", "rt", "rt-multi-thread", "sync"] }
